--- a/CNX_TestSuites-QA/test-output/emailable-report.html
+++ b/CNX_TestSuites-QA/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">142,627</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">302,287</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestSuites.Suite01</td><td><a href="#m0">Login</a></td><td rowspan="1">1535138269792</td><td rowspan="1">50570</td></tr><tr class="passedeven"><td><a href="#m1">VerifyRegisterButton</a></td><td rowspan="1">1535138320369</td><td rowspan="1">65664</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">TestSuites.Suite02a</td><td><a href="#m0">Login1</a></td><td rowspan="1">1535360348021</td><td rowspan="1">57121</td></tr><tr class="passedeven"><td><a href="#m1">Login2</a></td><td rowspan="1">1535360405148</td><td rowspan="1">69856</td></tr><tr class="passedeven"><td><a href="#m2">Login3</a></td><td rowspan="1">1535360475006</td><td rowspan="1">59666</td></tr><tr class="passedeven"><td><a href="#m3">Login4</a></td><td rowspan="1">1535360534674</td><td rowspan="1">24929</td></tr><tr class="passedeven"><td><a href="#m4">Login5</a></td><td rowspan="1">1535360559607</td><td rowspan="1">57505</td></tr><tr class="passedeven"><td><a href="#m5">Login6</a></td><td rowspan="1">1535360617114</td><td rowspan="1">30582</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestSuites.Suite01#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestSuites.Suite01#VerifyRegisterButton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestSuites.Suite02a#Login1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestSuites.Suite02a#Login2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestSuites.Suite02a#Login3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestSuites.Suite02a#Login4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestSuites.Suite02a#Login5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestSuites.Suite02a#Login6</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
