--- a/CNX_TestSuites-QA/test-output/index.html
+++ b/CNX_TestSuites-QA/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse-726223765\testng-customsuite.xml</span>
+                    <span>C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse--565514230\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite01" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login1">Login1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite01" class="method navigator-link" hash-for-method="VerifyRegisterButton">VerifyRegisterButton</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login2">Login2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login3">Login3</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login4">Login4</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login5">Login5</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestSuites.Suite02a" class="method navigator-link" hash-for-method="Login6">Login6</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,25 +145,61 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">TestSuites.Suite01</span>
+              <span class="class-name">TestSuites.Suite02a</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Login">
-                  </a> <!-- Login -->
-                  <span class="method-name">Login</span>
+                  <a name="Login1">
+                  </a> <!-- Login1 -->
+                  <span class="method-name">Login1</span>
                   <em>
-(Login)                  </em>
+(Login as Client Admin with coaching type access set as Both and edit email address)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyRegisterButton">
-                  </a> <!-- VerifyRegisterButton -->
-                  <span class="method-name">VerifyRegisterButton</span>
+                  <a name="Login2">
+                  </a> <!-- Login2 -->
+                  <span class="method-name">Login2</span>
                   <em>
-(Verify top navigation buttons)                  </em>
+(Log in as CCL Admin and edit Coaching type access to Integrated for the Client Admin)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login3">
+                  </a> <!-- Login3 -->
+                  <span class="method-name">Login3</span>
+                  <em>
+(Verify Integrated Admin Home page)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login4">
+                  </a> <!-- Login4 -->
+                  <span class="method-name">Login4</span>
+                  <em>
+(In CCL Admin page, verify change in email address; then change Coaching type access to Executive)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login5">
+                  </a> <!-- Login5 -->
+                  <span class="method-name">Login5</span>
+                  <em>
+(Login as Client Admin and verify Executive Admin home page -> Then edit email address)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login6">
+                  </a> <!-- Login6 -->
+                  <span class="method-name">Login6</span>
+                  <em>
+(In CCL Admin page, verify change in email address and change coaching type access back as Both, email address to original email address)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -151,7 +207,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse-726223765\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse--565514230\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -160,7 +216,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestSuites.Suite01&quot;/&gt;
+      &lt;class name=&quot;TestSuites.Suite02a&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -200,20 +256,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyRegisterButton')
-data.setCell(0, 2, 'TestSuites.Suite01')
-data.setCell(0, 3, 65664);
+data.setCell(0, 1, 'Login2')
+data.setCell(0, 2, 'TestSuites.Suite02a')
+data.setCell(0, 3, 69856);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Login')
-data.setCell(1, 2, 'TestSuites.Suite01')
-data.setCell(1, 3, 50570);
+data.setCell(1, 1, 'Login3')
+data.setCell(1, 2, 'TestSuites.Suite02a')
+data.setCell(1, 3, 59666);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Login5')
+data.setCell(2, 2, 'TestSuites.Suite02a')
+data.setCell(2, 3, 57505);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Login1')
+data.setCell(3, 2, 'TestSuites.Suite02a')
+data.setCell(3, 3, 57121);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'Login6')
+data.setCell(4, 2, 'TestSuites.Suite02a')
+data.setCell(4, 3, 30582);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'Login4')
+data.setCell(5, 2, 'TestSuites.Suite02a')
+data.setCell(5, 3, 24929);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -239,23 +311,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">TestSuites.Suite01</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">TestSuites.Suite02a</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">Start</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Login</span>
-                <span class="method-start">2842 ms</span>
+                <span class="method-name">Login1</span>
+                <span class="method-start">2601 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">VerifyRegisterButton</span>
-                <span class="method-start">53419 ms</span>
+                <span class="method-name">Login2</span>
+                <span class="method-start">59728 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">Logout</span>
-                <span class="method-start">119085 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="test-method">
+                <span class="method-name">Login3</span>
+                <span class="method-start">129586 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Login4</span>
+                <span class="method-start">189254 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Login5</span>
+                <span class="method-start">214187 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Login6</span>
+                <span class="method-start">271694 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
