--- a/CNX_TestSuites-QA/test-output/old/Default suite/classes.html
+++ b/CNX_TestSuites-QA/test-output/old/Default suite/classes.html
@@ -4,18 +4,34 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestSuites.Suite01</td>
+<td>TestSuites.Suite02a</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyRegisterButton</td>
+<td>Login5</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login</td>
+<td>Login6</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login3</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login4</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -33,8 +49,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>Logout</td>
-<td>&nbsp;</td></tr>
 </table>
