--- a/CNX_TestSuites-QA/test-output/old/Default suite/methods.html
+++ b/CNX_TestSuites-QA/test-output/old/Default suite/methods.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b266b3">  <td>18/08/25 00:47:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Suite01.Start()[pri:0, instance:TestSuites.Suite01@28f2a10f]">&gt;&gt;Start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="b266b3">  <td>18/08/25 00:47:49</td>   <td>2838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite01.Login()[pri:0, instance:TestSuites.Suite01@28f2a10f]">Login</td> 
-  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="b266b3">  <td>18/08/25 00:48:40</td>   <td>53415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite01.VerifyRegisterButton()[pri:0, instance:TestSuites.Suite01@28f2a10f]">VerifyRegisterButton</td> 
-  <td>main@1944702768</td>   <td></td> </tr>
-<tr bgcolor="b266b3">  <td>18/08/25 00:49:46</td>   <td>119082</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Suite01.Logout()[pri:0, instance:TestSuites.Suite01@28f2a10f]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944702768</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:29:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Suite02a.Start()[pri:0, instance:TestSuites.Suite02a@6da21078]">&gt;&gt;Start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:29:08</td>   <td>2597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login1()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login1</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:30:05</td>   <td>59724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login2()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login2</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:31:15</td>   <td>129582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login3()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login3</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:32:14</td>   <td>189250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login4()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login4</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:32:39</td>   <td>214183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login5()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login5</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>18/08/27 14:33:37</td>   <td>271690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Suite02a.Login6()[pri:0, instance:TestSuites.Suite02a@6da21078]">Login6</td> 
+  <td>main@155361948</td>   <td></td> </tr>
 </table>
