--- a/CNX_TestSuites-QA/test-output/index.html
+++ b/CNX_TestSuites-QA/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse-1158400902\testng-customsuite.xml</span>
+                    <span>C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse--714470697\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -207,7 +207,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse-1158400902\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\veenaramakrishnan\AppData\Local\Temp\testng-eclipse--714470697\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -260,27 +260,27 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Login2')
 data.setCell(0, 2, 'TestSuites.Suite02a')
-data.setCell(0, 3, 73874);
+data.setCell(0, 3, 74594);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Login1')
+data.setCell(1, 1, 'Login3')
 data.setCell(1, 2, 'TestSuites.Suite02a')
-data.setCell(1, 3, 63098);
+data.setCell(1, 3, 61735);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Login5')
+data.setCell(2, 1, 'Login1')
 data.setCell(2, 2, 'TestSuites.Suite02a')
-data.setCell(2, 3, 61022);
+data.setCell(2, 3, 60169);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Login3')
+data.setCell(3, 1, 'Login5')
 data.setCell(3, 2, 'TestSuites.Suite02a')
-data.setCell(3, 3, 58953);
+data.setCell(3, 3, 58650);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'Login6')
 data.setCell(4, 2, 'TestSuites.Suite02a')
-data.setCell(4, 3, 32005);
+data.setCell(4, 3, 31978);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'Login4')
 data.setCell(5, 2, 'TestSuites.Suite02a')
-data.setCell(5, 3, 24944);
+data.setCell(5, 3, 23609);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -296,6 +296,94 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login4</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\13\Admin Directory.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Changes to Coaching Type access screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\14\Admin Directory.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login5</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">----------------------||-Browser has started</span>
+                <span class="reporter-method-output">----------------------||-Screen shot of HomePage</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\15\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Screen shot of Coaching packages available in Home page</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\16\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Screen shot of Register button available in Home page</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\17\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Email Address field is editable</span>
+                <span class="reporter-method-output">----------------------||-AccountSettings page screenshot is taken, with change in email address</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\18\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Logout page screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\19\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login2</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">---------------------||Login as CCL Admin, search for the Admin whose email address is changed and edit its coaching type access to Integrated</span>
+                <span class="reporter-method-output">----------------------||-Browser has started</span>
+                <span class="reporter-method-output">----------------------||-CCL Admin HomePage is displayed</span>
+                <span class="reporter-method-output">----------------------||-Admin directory page is open</span>
+                <span class="reporter-method-output">----------------------||-Admin profile page is open and Coaching type access button is editable</span>
+                <span class="reporter-method-output">----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\07\Admin Directory.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Changes to Coaching Type access screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\08\Admin Directory.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login1</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">----------------------||-First we will login as a Client Admin set up with Coaching type access as 'Both' and edit email address of the Admin in Account settings page</span>
+                <span class="reporter-method-output">----------------------||-HomePage is open</span>
+                <span class="reporter-method-output">----------------------||-Screen shot of HomePage</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\01.png\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Screen shot of Coaching packages available in Home page</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\02.png\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Screen shot of Register button available in Home page</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\03.png\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-AccountSettings page screenshot is taken, BEFORE change in email address</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\04.png\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Email Address field is editable</span>
+                <span class="reporter-method-output">----------------------||-AccountSettings page screenshot is taken, with change in email address</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\05.png\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Save button is available to click</span>
+                <span class="reporter-method-output">----------------------||-Logout page screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\06.png\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login3</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">----------||Log in as the Client Admin that is now set as Integrated Admin and verify home page</span>
+                <span class="reporter-method-output">----------------------||-Browser has started</span>
+                <span class="reporter-method-output">----------------------||-HomePage is open</span>
+                <span class="reporter-method-output">----------------------||-Home page screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\09\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Coaching packages available in Home page screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\10\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Integrated Admin register button screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\11\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Email Address field is editable</span>
+                <span class="reporter-method-output">----------------------||-AccountSettings page screenshot is taken, with change in email address</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\12\Dashboard.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\12a\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Login6</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\20\Admin Directory.png' height='475' width='900'/><br></span>
+                <span class="reporter-method-output">----------------------||-Changes to Coaching Type access screenshot is taken</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\21\Admin Directory.png' height='475' width='900'/><br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -318,27 +406,27 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Login1</span>
-                <span class="method-start">4507 ms</span>
+                <span class="method-start">2842 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login2</span>
-                <span class="method-start">67607 ms</span>
+                <span class="method-start">63014 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login3</span>
-                <span class="method-start">141486 ms</span>
+                <span class="method-start">137610 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login4</span>
-                <span class="method-start">200443 ms</span>
+                <span class="method-start">199346 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login5</span>
-                <span class="method-start">225390 ms</span>
+                <span class="method-start">222956 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Login6</span>
-                <span class="method-start">286413 ms</span>
+                <span class="method-start">281607 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
