--- a/CNX_TestSuites-QA/test-output/old/Default suite/reporter-output.html
+++ b/CNX_TestSuites-QA/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,61 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>----------------------||-This test is to verify change in Coaching type access made by CCL Admin</td></tr>
+<tr><td>----------------------||-Browser has started</td></tr>
+<tr><td>----------------------||-First we will login as a Client Admin set up with Coaching type access as 'Both' and edit email address of the Admin in Account settings page</td></tr>
+<tr><td>----------------------||-HomePage is open</td></tr>
+<tr><td>----------------------||-Screen shot of HomePage</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\01.png\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Screen shot of Coaching packages available in Home page</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\02.png\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Screen shot of Register button available in Home page</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\03.png\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-AccountSettings page screenshot is taken, BEFORE change in email address</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\04.png\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Email Address field is editable</td></tr>
+<tr><td>----------------------||-AccountSettings page screenshot is taken, with change in email address</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\05.png\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Save button is available to click</td></tr>
+<tr><td>----------------------||-Logout page screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\06.png\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></td></tr>
+<tr><td>---------------------||Login as CCL Admin, search for the Admin whose email address is changed and edit its coaching type access to Integrated</td></tr>
+<tr><td>----------------------||-Browser has started</td></tr>
+<tr><td>----------------------||-CCL Admin HomePage is displayed</td></tr>
+<tr><td>----------------------||-Admin directory page is open</td></tr>
+<tr><td>----------------------||-Admin profile page is open and Coaching type access button is editable</td></tr>
+<tr><td>----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\07\Admin Directory.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Changes to Coaching Type access screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\08\Admin Directory.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------||Log in as the Client Admin that is now set as Integrated Admin and verify home page</td></tr>
+<tr><td>----------------------||-Browser has started</td></tr>
+<tr><td>----------------------||-HomePage is open</td></tr>
+<tr><td>----------------------||-Home page screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\09\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Coaching packages available in Home page screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\10\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Integrated Admin register button screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\11\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Email Address field is editable</td></tr>
+<tr><td>----------------------||-AccountSettings page screenshot is taken, with change in email address</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\12\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\12a\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\13\Admin Directory.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Changes to Coaching Type access screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\14\Admin Directory.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Browser has started</td></tr>
+<tr><td>----------------------||-Screen shot of HomePage</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\15\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Screen shot of Coaching packages available in Home page</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\16\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Screen shot of Register button available in Home page</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\17\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Email Address field is editable</td></tr>
+<tr><td>----------------------||-AccountSettings page screenshot is taken, with change in email address</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\18\Dashboard.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Logout page screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\19\You have been logged out! - Coaching Nexus.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Admin profile page image is taken before changes are made to coaching type access; Verify email address change</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\20\Admin Directory.png' height='475' width='900'/><br></td></tr>
+<tr><td>----------------------||-Changes to Coaching Type access screenshot is taken</td></tr>
+<tr><td><br><img src='C:\Users\veenaramakrishnan\TestSuites\Screenshots\Suite02a\21\Admin Directory.png' height='475' width='900'/><br></td></tr>
+</table>
